@@ -215,7 +215,7 @@ class sqlparser_general_testcase extends BaseTestCase {
 		$components = $this->fixture->_callRef('parseINSERT', $parseString);
 
 		$this->assertTrue(is_array($components), $components);
-		$insert = $this->cleanSql($this->fixture->compileINSERT($components));
+		$insert = $this->cleanSql($this->fixture->_callRef('compileINSERT', $components));
 		$expected = "INSERT INTO static_country_zones VALUES ('483', '0', 'NL', 'NLD', '528', 'DR', 'Drenthe', '')";
 		$this->assertEquals($expected, $insert);
 	}
@@ -229,7 +229,7 @@ class sqlparser_general_testcase extends BaseTestCase {
 		$components = $this->fixture->_callRef('parseINSERT', $parseString);
 
 		$this->assertTrue(is_array($components), $components);
-		$insert = $this->cleanSql($this->fixture->compileINSERT($components));
+		$insert = $this->cleanSql($this->fixture->_callRef('compileINSERT', $components));
 		$expected = "INSERT INTO static_country_zones VALUES ('483', '0', 'NL', 'NLD', '528', 'DR', 'Drenthe', '')";
 		$this->assertEquals($expected, $insert);
 	}
@@ -243,7 +243,7 @@ class sqlparser_general_testcase extends BaseTestCase {
 		$components = $this->fixture->_callRef('parseINSERT', $parseString);
 
 		$this->assertTrue(is_array($components), $components);
-		$insert = $this->cleanSql($this->fixture->compileINSERT($components));
+		$insert = $this->cleanSql($this->fixture->_callRef('compileINSERT', $components));
 		$expected = 'INSERT INTO static_territories (uid, pid, tr_iso_nr, tr_parent_iso_nr, tr_name_en) ';
 		$expected .= "VALUES ('1', '0', '2', '0', 'Africa')";
 		$this->assertEquals($expected, $insert);
@@ -259,7 +259,7 @@ class sqlparser_general_testcase extends BaseTestCase {
 		$components = $this->fixture->_callRef('parseINSERT', $parseString);
 
 		$this->assertTrue(is_array($components), $components);
-		$insert = $this->cleanSql($this->fixture->compileINSERT($components));
+		$insert = $this->cleanSql($this->fixture->_callRef('compileINSERT', $components));
 		$expected = "INSERT INTO static_territories VALUES ('1', '0', '2', '0', 'Africa'), ('2', '0', '9', '0', 'Oceania'), " .
 			"('3', '0', '19', '0', 'Americas'), ('4', '0', '142', '0', 'Asia')";
 		$this->assertEquals($expected, $insert);
@@ -275,7 +275,7 @@ class sqlparser_general_testcase extends BaseTestCase {
 		$components = $this->fixture->_callRef('parseINSERT', $parseString);
 
 		$this->assertTrue(is_array($components), $components);
-		$insert = $this->cleanSql($this->fixture->compileINSERT($components));
+		$insert = $this->cleanSql($this->fixture->_callRef('compileINSERT', $components));
 		$expected = 'INSERT INTO static_territories (uid, pid, tr_iso_nr, tr_parent_iso_nr, tr_name_en) ';
 		$expected .= "VALUES ('1', '0', '2', '0', 'Africa'), ('2', '0', '9', '0', 'Oceania')";
 		$this->assertEquals($expected, $insert);
